2013-01-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	pandoradb_data.sql
	pandoradb.data.postgreSQL.sql
	pandoradb.data.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: switch to show 
	or hide visual console.

2013-01-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_menu.php
	include/functions_config.php
	godmode/menu.php
	godmode/setup/setup_general.php
	godmode/setup/setup_netflow.php
	godmode/setup/setup.php
	godmode/setup/performance.php
	godmode/setup/setup_auth.php
	godmode/setup/setup_visuals.php: Changed style views to tabs.

2013-01-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php
	include/help/en/help_events_replication.php
	include/help/en/help_module_interval.php
	include/help/en/help_events_history.php
	include/help/es/help_events_replication.php
	include/help/es/help_events_history.php
	operation/events/events.php: Fixed bug #3599448 of
	setup javascript error. 
	Added help documents to events history and events 
	replication. Typo fix in other help document

2013-01-18  Sergio Martin <sergio.martin@artica.es>

	* operation/events/events_rss.php
	operation/events/export_csv.php
	operation/events/events_list.php
	operation/events/events.php
	operation/events/events.build_query.php: Fixed tag filters in
	event view and other filter elements missed in the csv and rss 
	tools. Merged from 4.0.3

	Now the code of query conditions for events is common for 
	all of the pages where is retrieved

2013-01-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_graph.php
	 include/functions_reporting.php: Merged fixes for string graphs.

2013-01-17  Ramon Novoa  <rnovoa@artica.es>

	* operation/netflow/nf_live_view.php: Style fix.

2013-01-17  Sancho Lerena <slerena@artica.es>

	* include/functions_ui.php: Fixed cache control for