@@ -1,3 +1,9 @@
+2013-01-21  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_users.php
+	godmode/groups/configure_group.php: fixed a problem retrieving
+	the groups to the combo of set group parent
+
 2013-01-21 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	pandoradb_data.sql
